Added network overview page.

--- a/Frontend/create-account.html
+++ b/Frontend/create-account.html
@@ -23,7 +23,7 @@
                 <a class="nav-item nav-link" id="index-link" href="index.html">Home</a>
                 <a class="nav-item nav-link" id="login-link" href="login.html">Login</a>
                 <a class="nav-item nav-link active" id="create-acc-link" href="create-account.html">Create Account</a>
-                <a class="nav-item nav-link" id="about-us-link" href="about-us.html">About Us</a>
+                <a class="nav-item nav-link" id="network-overview-link" href="network-overview.html">Network Overview</a>
                 <a class="nav-item nav-link" id="become-a-node-link" href="become-a-node.html">Become a Node</a>
                 <a class="nav-item nav-link" id="mail-link" href="mail.html">Mail</a>
                 <a class="nav-item nav-link" id="contact-us-link" href="contact-us.html">Contact Us</a>
@@ -36,7 +36,7 @@
                 <div class="card card-signin my-5">
                     <div class="card-body">
                         <h5 class=" card-title text-center">Create Account</h5>
-                        Pressing the "Generate Keys" button below will create three keys required to use BlockMail: Wallet Address (wallet.addr), Wallet Password (walled.pass), and Mail Decryption Key (private.key). This may take from a few seconds to a minute; please be patient.<br>
+                        Pressing the "Generate Keys" button below will create three keys required to use BlockMail: Wallet Address (wallet.addr), Wallet Password (wallet.pass), and Mail Decryption Key (private.key). This may take from a few seconds to a minute; please be patient.<br>
                         If you can't save them using the "Download" buttons,
                         copy them into files and save them.<br><br>
                         <b>NOTE</b>: If you lose these keys, it is <em>IMPOSSIBLE</em> to recover them, so keep them somewhere safe and have them backed up! <br><br>
@@ -76,6 +76,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- My JavaScript Import -->
+    <script src="js/constants.js"></script>
     <script src="js/getCookie.js"></script>
     <script src="js/checkLoggedIn.js"></script>
     <script src="js/modules/elliptic.js"></script>
