Reworked folder structure to be simpler to test

--- a/Frontend/become-a-node.html
+++ b/Frontend/become-a-node.html
@@ -26,11 +26,29 @@
                 <a class="nav-item nav-link" id="network-overview-link" href="network-overview.html">Network Overview</a>
                 <a class="nav-item nav-link active" id="become-a-node-link" href="become-a-node.html">Become a Node</a>
                 <a class="nav-item nav-link" id="mail-link" href="mail.html">Mail</a>
-                <a class="nav-item nav-link" id="contact-us-link" href="contact-us.html">Contact Us</a>
+
             </div>
         </div>
     </nav>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-8 mx-auto">
+                <div class="card card-signin my-5">
+                    <div class="card-body">
+                        <h5 class=" card-title text-center">Become a Node</h5>
+
+                        If you wish to contribute to the BlockMail network, become a node! Simply click the download button below. You may need to do the following to ensure that your node instance can communicate with the rest of the network:
+                        <br><br>
+                        <ol>
+                            <li>Open TCP ports 41285-41288 on your PC and/or Firewall.</li>
+                            <li>Change the "server_ip" attribute in the config.json file (if not using the default localhost IP).</li>
+                        </ol>
+                        <a href="files/BlockMail-Client-v1.0.zip" id="download-client-btn"><button class="btn btn-lg btn-primary btn-block text-uppercase">Download BlockMail Client</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="page-footer font-small pt-4">
         <div class="container-fluid text-center text-md-left">
             <div class="row">
