--- a/Frontend/mail.html
+++ b/Frontend/mail.html
@@ -28,7 +28,7 @@
                 <a class="nav-item nav-link" id="network-overview-link" href="network-overview.html">Network Overview</a>
                 <a class="nav-item nav-link" id="become-a-node-link" href="become-a-node.html">Become a Node</a>
                 <a class="nav-item nav-link active" id="mail-link" href="mail.html">Mail</a>
-                <a class="nav-item nav-link" id="contact-us-link" href="contact-us.html">Contact Us</a>
+
             </div>
         </div>
     </nav>
@@ -58,6 +58,23 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="mail-modal">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="mail-modal-title">Mail Sent!</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <h5 class="text-center" id="mail-modal-body">Your email has been sent! It should appear in the recipients mailbox at the next Block interval.</h5>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Okay</button>
                     </div>
                 </div>
             </div>
