Implemented promise to randomly select intake node for blockchain ops. Need to test

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -26,7 +26,7 @@
                 <a class="nav-item nav-link" id="network-overview-link" href="network-overview.html">Network Overview</a>
                 <a class="nav-item nav-link" id="become-a-node-link" href="become-a-node.html">Become a Node</a>
                 <a class="nav-item nav-link" id="mail-link" href="mail.html">Mail</a>
-                
+
             </div>
         </div>
     </nav>
@@ -95,6 +95,7 @@
     <!-- My JavaScript Import -->
     <script src="js/constants.js"></script>
     <script src="js/modules/elliptic.js"></script>
+    <script src="js/activeMasters.js"></script>
     <script src="js/getCookie.js"></script>
     <script src="js/checkLoggedIn.js"></script>
     <script src="js/auth.js"></script>
