--- a/Frontend/mail.html
+++ b/Frontend/mail.html
@@ -167,6 +167,7 @@
     <!-- My JavaScript Import -->
     <script src="js/constants.js"></script>
     <script src="js/modules/node-rsa.js"></script>
+    <script src="js/activeMasters.js"></script>
     <script src="js/getCookie.js"></script>
     <script src="js/checkLoggedIn.js"></script>
     <script src="js/mail.js"></script>
