--- a/Frontend/network-overview.html
+++ b/Frontend/network-overview.html
@@ -106,6 +106,7 @@
     <!-- My JavaScript Import -->
     <script src="js/constants.js"></script>
     <script src="js/getCookie.js"></script>
+    <script src="js/activeMasters.js"></script>
     <script src="js/checkLoggedIn.js"></script>
     <script src="js/checkNodeStatus.js"></script>
     <script src="js/getAllMail.js"></script>
