--- a/Frontend/create-account.html
+++ b/Frontend/create-account.html
@@ -78,6 +78,7 @@
     <!-- My JavaScript Import -->
     <script src="js/constants.js"></script>
     <script src="js/getCookie.js"></script>
+    <script src="js/activeMasters.js"></script>
     <script src="js/checkLoggedIn.js"></script>
     <script src="js/modules/elliptic.js"></script>
     <script src="js/modules/node-rsa.js"></script>
